--- a/spotify-clone/package.json
+++ b/spotify-clone/package.json
@@ -24,9 +24,11 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/spotify-web-api-node": "^5.0.11",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2"
   }
 }
